--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,6 @@
     
   </p>
 
-  <p><a href="https://www.buymeacoffee.com/derekcarlos">🤝 Buy me a coffee?</a>
+  <p><a href="https://www.buymeacoffee.com/derekcarlos">🤝 Buy me a coffee? ☕️</a>
   </p>
 </footer>
