--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,4 +13,15 @@
 
   <p><a href="https://www.buymeacoffee.com/derekcarlos">🤝 Buy me a coffee? ☕️</a>
   </p>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVP614VZ1R"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-CVP614VZ1R');
+  </script>
+  
 </footer>
